@@ -30,7 +30,7 @@
 #define SYSCTL
 #endif
 
-#if NETSTAT_LINUX || NETSTAT_BSD || NETSTAT_BSD_BYTES || NETSTAT_SOLARIS
+#if NETSTAT_LINUX || NETSTAT_BSD || NETSTAT_BSD_BYTES || NETSTAT_SOLARIS || NETSTAT_NETBSD
 #define NETSTAT 1
 #endif
 
