@@ -13,6 +13,8 @@
                   - added Solaris support
                   - fixed segfault with getifaddrs on MacOSX < 10.3
                   - fixed NetBSD/OpenBSD compile 
+                  - added NetBSD/OpenBSD netstat support
+                  - fixed netstat parsing if address field missing
   12-20-2004 0.4: pre1:
                   - get_iface_stats cleanup
                   - plain and csv output added
